--- a/package.json
+++ b/package.json
@@ -90,11 +90,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dewart/room-ui.git"
+    "url": "https://github.com/kwhittenberger/room-ui.git"
   },
-  "homepage": "https://github.com/dewart/room-ui#readme",
+  "homepage": "https://github.com/kwhittenberger/room-ui#readme",
   "bugs": {
-    "url": "https://github.com/dewart/room-ui/issues"
+    "url": "https://github.com/kwhittenberger/room-ui/issues"
   },
   "engines": {
     "node": ">=18.0.0"
