--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           npm --version
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Verify package.json version matches git tag
         run: |
